--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "beeshell": "^1.0.1",
+    "querystring": "^0.2.0",
     "react": "16.5.0",
     "react-native": "0.57.2",
     "react-native-elements": "^0.19.1",
     "react-native-vector-icons": "^6.0.2",
-    "react-navigation": "^2.17.0"
+    "react-navigation": "^2.17.0",
+    "react-redux": "^5.1.0",
+    "redux": "^4.0.1",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
