--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-navigation": "^2.17.0",
     "react-redux": "^5.1.0",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
