--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.57.2",
     "react-native-elements": "^0.19.1",
     "react-native-percentage-circle": "^1.0.7",
+    "react-native-step-indicator": "0.0.9",
     "react-native-swiper": "^1.5.14",
     "react-native-table-component": "^1.1.8",
     "react-native-vector-icons": "^6.0.2",
