--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   "dependencies": {
     "axios": "^0.18.0",
     "beeshell": "^1.0.1",
+    "crypto-js": "^3.1.9-1",
     "querystring": "^0.2.0",
     "react": "16.5.0",
     "react-native": "0.57.2",
     "react-native-elements": "^0.19.1",
     "react-native-percentage-circle": "^1.0.7",
+    "react-native-progress": "^3.5.0",
     "react-native-step-indicator": "0.0.9",
     "react-native-swiper": "^1.5.14",
     "react-native-table-component": "^1.1.8",
     "react-native-vector-icons": "^6.0.2",
+    "react-native-webview": "^2.14.3",
     "react-navigation": "^2.17.0",
     "react-redux": "^5.1.0",
     "redux": "^4.0.1",
